--- a/index.html
+++ b/index.html
@@ -1184,7 +1184,7 @@
                                        d="M18.0645 13.1504C18.6633 13.6926 19 14.3038 19 14.9504C19 17.1871 14.9706 19.0004 10 19.0004C5.02944 19.0004 1 17.1871 1 14.9504C1 14.3038 1.33671 13.6926 1.93552 13.1504"
                                        stroke="#F8FF35" stroke-width="1.5" stroke-linecap="round" />
                                  </svg>
-                                 <a href="https://www.google.com/maps/place/Argentina,+Santiago+del+Estero+Province,+Argentina/@-28.9465488,-65.3732971,7.53z/data=!4m5!3m4!1s0x9436ede70248f47b:0x3bdbc4e928700c2a!8m2!3d-29.5355289!4d-62.2664853"
+                                 <a href="https://maps.app.goo.gl/gxNgqBxaVydzu62T7"
                                     target="_blank">10th of Ramadan City <br>Egypt</a>
                               </li>
                            </ul>
